refactor: 공고 카드 정렬 로직 수정